--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "coopr-hq-core"]
 	path = coopr-hq-core
-	url = git@github.com:CoopR-Mod/CoopR-HQ-Core.git
+	url = https://github.com/CoopR-Mod/CoopR-HQ-Core.git
