--- a/coopr-hq-client/pom.xml
+++ b/coopr-hq-client/pom.xml
@@ -64,22 +64,46 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-all</artifactId>
+            <version>2.4.11</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
         <plugins>
             <plugin>
+                <groupId>org.codehaus.gmavenplus</groupId>
+                <artifactId>gmavenplus-plugin</artifactId>
+                <version>1.5</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>addTestSources</goal>
+                            <goal>testCompile</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.6.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.8.1</version>
+                <version>2.20</version>
                 <configuration>
-                    <testSourceDirectory>src/test/groovy</testSourceDirectory>
-                    <testSourceDirectory>src/test/java</testSourceDirectory>
                     <includes>
-                        <!-- By default only files ending in 'Test' will be included, so also include support for Spock style naming convention -->
-                        <!-- Oddly enough for Groovy files, *Spec.groovy does not work, but *Spec.java does -->
-                        <include>**/*Test.java</include>
-                        <include>**/*Spec.groovy</include>
+                        <include>**/*Spec.java</include>
                     </includes>
                 </configuration>
             </plugin>
