--- a/coopr-hq-webservice/src/main/resources/application.properties
+++ b/coopr-hq-webservice/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.data.mongodb.database=coopr_hq
 server.port=80
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
