--- a/coopr-hq-webservice/pom.xml
+++ b/coopr-hq-webservice/pom.xml
@@ -59,6 +59,10 @@
             <optional>true</optional>
         </dependency>
         <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
